# tinyde

./: README.md  main.py  manifest.mf
common_functions_libs/: common_functions.py
integration_test_features/: basic_checks.py  main.py
metadata_management_features/: create_and_read_ddl.py  create_table.py  main.py  update_existing_ddl.py
tinyde/: LICENSE.py  README.md  __init__.py  main.py  pyproject.toml
tinyde/common_functions_libs/: __init__.py  common_functions.py
tinyde/integration_test_features/: README.md  __init__.py  basic_checks.py  main.py
tinyde/metadata_management_features/: README.md  __init__.py  create_and_read_ddl.py  create_table.py  main.py  update_existing_ddl.py
tinyde/tinyde.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tinyde/write_analyzer_features/: __init__.py  data_characteristics.py  executor_details.py  main.py  recommendations.py
tinyde/write_function_features/: README.md  __init__.py  common_functions.py  main.py  scd_1_overwrite_merge_append.py  scd_2_ops.py
write_function_features/: common_functions.py  main.py  scd_1_overwrite_merge_append.py  scd_2_ops.py
